@@ -28,7 +28,7 @@ public class Version  implements Serializable {
 
 	public static final String PREFIX = "Version:";
 	
-	public static String VERSION = "2.3-150917.3";
+	public static String VERSION = "2.3-150917.4";
 	public static String VERSION_DATE = "09/17/15";
 	
 	public String version;
